--- a/src/app/administrators/administrators.component.html
+++ b/src/app/administrators/administrators.component.html
@@ -1,1 +1,160 @@
-<p>administrators works!</p>
+<mat-card class="mat-card-config-editor">
+  <mat-card-content>
+    <mat-form-field class="config-edit-field-small">
+      <input class="config-input" matInput placeholder="UUID" disabled>
+    </mat-form-field>
+    <mat-form-field class="config-edit-field">
+      <input class="config-input" matInput placeholder="Username" disabled>
+    </mat-form-field>
+    <mat-form-field class="config-edit-field">
+      <input class="config-input"  matInput placeholder="Password" required>
+    </mat-form-field>
+    <button class="config-save-button" mat-raised-button color="primary" type="submit">Save</button>
+  </mat-card-content>
+</mat-card>
+
+<mat-card>
+  <mat-card-content>
+    <mat-card-title>Administrators</mat-card-title>
+    <mat-form-field class="filter-form-field">
+      <input matInput (keyup)="adminsApplyFilter($event)" placeholder="Search users" color="primary">
+    </mat-form-field>
+
+    <div class="mat-elevation-z8">
+      <table mat-table [dataSource]="adminsDataSource"  class="full-width-table" matSort aria-label="Users">
+        <!-- Id Column -->
+        <ng-container matColumnDef="id">
+          <th *matHeaderCellDef mat-header-cell mat-sort-header>Id</th>
+          <td mat-cell *matCellDef="let element">{{element.id}}</td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="username">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Username</th>
+          <td mat-cell *matCellDef="let element">{{element.username}}</td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="password">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Password</th>
+          <td mat-cell *matCellDef="let element">{{element.password}}</td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="date_added">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Date Added</th>
+          <td mat-cell *matCellDef="let element">{{element.date_added}}</td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="last_updated">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Last Updated</th>
+          <td mat-cell *matCellDef="let element">{{element.last_updated}}</td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="uuid">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>UUID</th>
+          <td mat-cell *matCellDef="let element">{{element.uuid}}</td>
+        </ng-container>
+
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="failed_login_attempts">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Last Updated</th>
+          <td mat-cell *matCellDef="let element">{{element.failed_login_attempts}}</td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="is_2fa_configured">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>2FA Configured</th>
+          <td mat-cell *matCellDef="let element">{{element.is_2fa_configured}}</td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="adminsDisplayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: adminsDisplayedColumns;"></tr>
+      </table>
+
+      <mat-paginator #adminsPaginator
+                     [length]="adminsDataSource.data.length"
+                     [pageIndex]="0"
+                     [pageSize]="8"
+                     [pageSizeOptions]="[5, 10, 20]"
+                     aria-label="Select page">
+      </mat-paginator>
+    </div>
+  </mat-card-content>
+</mat-card>
+
+<mat-card>
+  <mat-card-title>Users</mat-card-title>
+  <mat-card-content>
+    <mat-form-field class="filter-form-field">
+      <input matInput (keyup)="usersApplyFilter($event)" placeholder="Search users" color="primary">
+    </mat-form-field>
+
+    <div class="mat-elevation-z8">
+      <table mat-table [dataSource]="usersDataSource"  class="full-width-table" matSort aria-label="Users">
+        <!-- Id Column -->
+        <ng-container matColumnDef="id">
+          <th *matHeaderCellDef mat-header-cell mat-sort-header>Id</th>
+          <td mat-cell *matCellDef="let element">{{element.id}}</td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="username">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Username</th>
+          <td mat-cell *matCellDef="let element">{{element.username}}</td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="password">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Password</th>
+          <td mat-cell *matCellDef="let element">{{element.password}}</td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="date_added">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Date Added</th>
+          <td mat-cell *matCellDef="let element">{{element.date_added}}</td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="last_updated">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Last Updated</th>
+          <td mat-cell *matCellDef="let element">{{element.last_updated}}</td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="uuid">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>UUID</th>
+          <td mat-cell *matCellDef="let element">{{element.uuid}}</td>
+        </ng-container>
+
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="failed_login_attempts">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Last Updated</th>
+          <td mat-cell *matCellDef="let element">{{element.failed_login_attempts}}</td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="is_2fa_configured">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>2FA Configured</th>
+          <td mat-cell *matCellDef="let element">{{element.is_2fa_configured}}</td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="usersDisplayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: usersDisplayedColumns;"></tr>
+      </table>
+
+      <mat-paginator #paginator
+                     [length]="usersDataSource.data.length"
+                     [pageIndex]="0"
+                     [pageSize]="8"
+                     [pageSizeOptions]="[5, 10, 20]"
+                     aria-label="Select page">
+      </mat-paginator>
+    </div>
+  </mat-card-content>
+</mat-card>
